--- a/2-04052022/css/styles.css
+++ b/2-04052022/css/styles.css
@@ -45,14 +45,14 @@ h1 {
 img {
   width: 400px; /* largura da imagem*/
   height: 450; /* autura da imagem*/
-  opacity: 0.5; /*efeito de transparencia em 50%*/
+  /*opacity: 0.5; /*efeito de transparencia em 50%*/
   transition: ease 1s; /*efeito de tarnsição(animação) de um segundo*/
 }
-img:hover {
-  transform: rotate(360deg); /*rotacionar em 360 graus*/
-  opacity: 1;
-  border-radius: 100px; /*arredondar os cantos da imagem*/
-}
+/*img:hover {
+  transform: rotate(360deg); /*rotacionar em 360 graus
+  opacity: 1;*/
+/*border-radius: 100px; /*arredondar os cantos da imagem
+}*/
 p {
   font-family: "ariel";
   font-size: 20pt;
@@ -81,7 +81,7 @@ nav ul li:hover {
 nav ul li a {
   font-family: verdana;
   font-size: 10pt;
-  color: rgb(192, 207, 250);
+  color: rgb(151, 175, 255);
   /* retirar o underliner do linnk */
   text-decoration: none; /*nenhum*/
 }
@@ -106,6 +106,9 @@ footer img {
 footer div {
   width: 20%;
   margin: 20px;
+}
+#redes ul {
+  list-style: none;
 }
 #redes ul li {
   display: inline;
@@ -229,3 +232,51 @@ h3 {
   font-weight: 10px;
 }
 /* --------------------------------------------------------------------Fim do Produtos------------------------------------------------------------------------------------------------*/
+/* --------------------------------------------------------------------Inicio de localizaçao------------------------------------------------------------------------------------------------*/
+#mapa iframe {
+  width: 600;
+  height: 450px;
+  border: 0px;
+}
+/* --------------------------------------------------------------------Fim de localizaçao------------------------------------------------------------------------------------------------*/
+
+/* --------------------------------------------------------------------inicio d doação------------------------------------------------------------------------------------------------*/
+
+h3 {
+  font-family: arial;
+  font-size: 30pt;
+  margin: 30px;
+}
+
+#linha {
+  padding: 30px;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; /*quebra de linha*/
+  box-shadow: 2px 2px 10px rgb(164, 190, 212);
+  justify-content: center;
+}
+#linha div {
+  width: 30%;
+  margin: 10px;
+  border: 1px solid silver;
+}
+#linha div img {
+  width: 100%;
+  height: 300px;
+}
+#linha div h4 {
+  font-family: arial;
+  font-size: 15pt;
+  margin: 10px;
+}
+#linha div p {
+  font-family: arial;
+  font-size: 15pt;
+  color: rgb(44, 41, 61);
+  margin: 10px;
+  font-weight: 10px;
+}
+
+/* --------------------------------------------------------------------Fim de doções------------------------------------------------------------------------------------------------*/
